--- a/media/zwanto-screen.css
+++ b/media/zwanto-screen.css
@@ -250,9 +250,16 @@ h2#technical-skills + p {
 }
 
     
-.fa, .fab, .fal{
+.fa, .fab, .fal, .far, .fas, 
+a:visited .fa, a:visited .fab, a:visited .fal,
+a:visited .far, a:visited .fas{
     color: var(--color-h2-title);
+}
+
+p .fa,p .fab,p .fal,p .far,p .fas {
+    font-size: 0.8em;
 }
 #content:last-child {
     margin-bottom: 4rem;
 }
+
