--- a/media/zwanto-screen.css
+++ b/media/zwanto-screen.css
@@ -59,7 +59,7 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 80%;
+	/* font-size: 80%; */
 	line-height: 1.5em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: 'Quicksand', sans-serif;
@@ -173,7 +173,7 @@ a:hover {
 	left: var(--left-margin);
 	color: #aaa;
 	font-family: Menlo,monospace,sans-serif;
-	font-size: 80%;
+	font-size: 0.8em;
 }
 
 #webaddress a {
