--- a/media/zwanto-screen.css
+++ b/media/zwanto-screen.css
@@ -65,7 +65,6 @@ body {
 	font-family: 'Quicksand', sans-serif;
 	margin-top: 1em;
 	margin-left: 1em;
-    overflow-x: hidden;
 }
 
 p {
@@ -74,6 +73,7 @@ p {
 	margin-bottom: 0.7em;
 	margin-right: 0;
 	width: 65%;
+	text-align: justify;
 }
 
 code {
