--- a/media/zwanto-screen.css
+++ b/media/zwanto-screen.css
@@ -96,6 +96,7 @@ ul {
 	width: 65%;
 	margin-bottom: 1.5em;
 	margin-top: -0.5em;
+	list-style: circle;
 }
 
 /*uncomment to get dashes in the list*/
