--- a/media/zwanto-print.css
+++ b/media/zwanto-print.css
@@ -6,7 +6,7 @@
 :root {
     --color-h2-title:#2394b4;
     
-    --left-margin:25%;
+    --left-margin:10%;
 }
 
 html, body, div, span, applet, object, iframe,
@@ -72,7 +72,7 @@ p {
 	margin-left: var(--left-margin);
 	margin-bottom: 0.7em;
 	margin-right: 0;
-	width: 65%;
+	width: 80%;
 	text-align: justify;
 }
 
@@ -93,9 +93,10 @@ p code {
 ul { 
 	position: relative;
 	margin-left: var(--left-margin);
-	width: 65%;
+	width: 80%;
 	margin-bottom: 1.5em;
 	margin-top: -0.5em;
+	list-style: circle;
 }
 
 /*uncomment to get dashes in the list*/
@@ -122,7 +123,7 @@ li ul {
 h1,h2,h3,h4 {
 	font-weight: 400;
 	font-family: Cousine,Verdana,sans-serif;
-	width: 65%;
+	width: 80%;
 }
 
 h1 {
@@ -140,13 +141,13 @@ h1+p {
 }
 
 h2 {
-	font-size: 1.1em;
+	font-size: 1.5em;
 	color: var(--color-h2-title);
 	margin-top: 3em;
-	position: relative;
 	top: 1.4em;
-	text-align: right;
 	width: 15%;
+	margin-left: var(--left-margin);
+    margin-bottom: 20px;
 }
 
 h3 {
@@ -206,7 +207,7 @@ strong {
 /* CUSTOM RULES */
 .sub_container ul {
     margin-left: 0.25rem;
-    list-style: circle;
+
 }
 .sub_container p {
     margin-left: 0;
@@ -233,7 +234,7 @@ h1{
 /* SUB CONTAINER CSS */
 .sub_container {
     left: calc(var(--left-margin) + 0.25rem);
-    width: 64%;
+    width: 79%;
     position: relative;
     border-left: 2px solid #f3f3f3;
     margin-bottom: 1.5em;
